--- a/06_Dom/two.html
+++ b/06_Dom/two.html
@@ -8,7 +8,7 @@
     </head>
     <body style = "background-color: black; color:bisque"> 
         <div class = "parent">
-            <!-------this is a comment-->
+            
             <div class ="day"> Monday </div>
             <div class = "day"> tuesday </div>
             <div class = "day"> wednesday </div>
@@ -16,19 +16,21 @@
         </div>
     </body>
     <script>{
-        const parent = document.queryselector('parent')
-        //console.log(parent);
+        const parent = document.querySelector('.parent');
+        console.log(parent);
         //console.log(parent.children);
+        //for(let i = 0; i < parent.children.length; i++){
         //console.log(parent.children[i].innerHTML);
-    }
-    parent.children[1].style.color = "orange"
-    //console.log(parent.firstElementchild);
+    //}
+}
+    parent.children[1].style.color = "orange";
+    //console.log(parent.firstElementChild);
     //console.log(parent.lastElementChild);
 
-    const dayone = document.querySelector('day')
+    //const dayone = document.querySelector('.day');
     //console.log(dayone);
     //console.log(dayone.parentElement);
     //console.log(dayone.nextElementSibling);
-    console.log("NODES:",parent.chidNodes);
+    //console.log("NODES:",dayone.parentElement.childNodes);
     </script>
 </html>
