--- a/06_Dom/one.html
+++ b/06_Dom/one.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTBF-8">
     <title>Dom learning</title>
+    <style>
+        .bg-black{
+            background-color:#212121;
+            color:#fff;
+        }
+        </style>
     </head>
-    <body>
-        <div class ="bg-black">
-            <h1 class ="heading">Dom learning on javascript</h1>
+    <body class="bg-black">
+        <div>
+            <h1 id="title"class ="heading">Dom learning on javascript <span style = "display:none;">test text</span></h1>
+            <h2>lorem ipsum dolor sit amet.</h2>
+            <h2>lorem ipsum dolor sit amet.</h2>
+            <h2>lorem ipsum dolor sit amet.</h2>
+            <h2>lorem ipsum dolor sit amet.</h2>
             <p>lorem ipsum dolor sit amet.</p>
+            <input type = "password" name=""id="">
+            <ul>
+                <li class = "list-item">one</li>
+                <li class = "list-item">two</li>
+                <li class ="list-item">three</li>
+                <li class = "list-item">four</li>
+                </ul>
         </div>
     </body>
 </head>
